# wishful

./: .gitignore  Makefile  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: 038a17f77709_refactor_wishlist_user_many_to_many.py  40627cbcb539_add_link_column_to_wishitemdb.py  b09a57a4b908_add_group_sharing_models.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  routes.py
backend/app/db/: crud.py  database.py  models.py
backend/app/routes/: groups.py  recommendations.py  sharing.py  user.py  wishlist.py  wishlist_items.py
backend/app/utils/: email_utils.py  logger.py
frontend/: .gitignore  README.md  firepit-log.txt  pubspec.yaml
frontend/android/app/: google-services.json
frontend/ios/Runner/: GoogleService-Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: guest_service.dart  invite_landing_page.dart  login_screen.dart  main.dart  models.dart  services.dart  signup_screen.dart  welcome_screen.dart  wishful_app_bar.dart  wishlist_details_screen.dart  wishlist_screen.dart
frontend/lib/models/: group_search_result.dart  user_search_result.dart  wish_item.dart  wish_list.dart
frontend/lib/routes/: app_router.dart
frontend/lib/screens/: invite_landing_page.dart  login_screen.dart  signup_screen.dart  welcome_screen.dart  wishlist_details_screen.dart  wishlist_screen.dart
frontend/lib/services/: auth_service.dart  services.dart
frontend/lib/widgets/: create_group_dialog.dart  group_members_dialog.dart  (+3 more)
frontend/test/: widget_test.dart
(+1 files in other folders)
